# cellunet

./: LICENSE  README.md  on_the_fly.py  patches.py  predict.py  pyproject.toml  tests_augment.py  tfutils.py
cellunet/: Dockerfile  LICENSE  README.md  __init__.py  on_the_fly.py  patches.py  predict.py  tfutils.py  train.py
cellunet/data/: labels0.tif  labels1.tif
cellunet/utils/: _allen.py  metrics.py  model_builder.py  objectives.py
etc/: startup.sh
tests/: test_cellunet.py
utils/: augmentation.py
